refactors startup functions to seperate file

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
-SRCFILES = node.cpp hash.cpp helper.cpp foreground.cpp background.cpp communication.cpp  main.cpp help.cpp
-HEADERS = node.h hash.h helper.h foreground.h background.h communication.h help.h
+SRCFILES = node.cpp hash.cpp helper.cpp foreground.cpp background.cpp communication.cpp  main.cpp help.cpp startup.cpp
+HEADERS = node.h hash.h helper.h foreground.h background.h communication.h help.h startup.h
 CPPFLAGS = -std=c++0x -Wall -Wextra -lpthread
 
 main: $(HEADERS) $(SRCFILES)
